--- a/index1.html
+++ b/index1.html
@@ -19,7 +19,7 @@
 			<div id="store-status"></div>
 		</div>
 	</div>
-	<category-list> daniel </category-list>
+	<genre-list> daniel </genre-list>
 	<my-cart> kira </my-cart>
 	<ng-view></ng-view>
 </body>
