--- a/index1.html
+++ b/index1.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="musicStore">
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
 </head>
-<body ng-app="" >
+<body ng-controller="mainController">
 	<div id="main-header">
 		<div id="nav-user">
 			<a href="">Home</a>
@@ -22,5 +22,6 @@
 	<genre-list> daniel </genre-list>
 	<my-cart> kira </my-cart>
 	<ng-view></ng-view>
+	<script src="app/angular.min.js"></script>
 </body>
 </html>
