--- a/index1.html
+++ b/index1.html
@@ -9,9 +9,9 @@
 
 		<div id="nav-user">
 			<a href="">Home</a>
-			<a href="">My Account</a>
+			<a href="" ng-class="">My Account</a>
 			<a href="">My Wishlist</a>
-			<a href="">Checkout</a>
+			<a href="">Check Out</a>
 			<a href="">Login</a>
 	    </div>
 
