--- a/index1.html
+++ b/index1.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Home Page</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body ng-controller="mainController">
 	<div id="main-header">
@@ -28,8 +29,9 @@
 	
 	<ng-view></ng-view>
 
-	<script src="app/app/angular.min.js"></script>
+	<script src="app/angular.min.js"></script>
 	<script src="app/app.js"></script>
 	<script src="app/Shared/Modules.js"></script>
+
 </body>
 </html>
