--- a/index1.html
+++ b/index1.html
@@ -28,9 +28,9 @@
 	
 	<div id="view-route"><ng-view></ng-view></div>
 
-	<script src="app/angular.min.js"></script>
+	<script src="angular.min.js"></script>
 	<script src="app/app.js"></script>
 	<script src="app/Shared/Modules.js"></script>
-
+	<script src="app/Cart/CartDirective.js"></script>
 </body>
 </html>
