--- a/app/Genre/_genre-list.html
+++ b/app/Genre/_genre-list.html
@@ -1,6 +1,6 @@
 
 <aside>
 	<div id="genre-list">
-		<div ng-repeat="genre in genres">fddsfds</div>
+		<div ng-repeat="genre in genres">{{genre}}</div>
 	</div>
 </aside>
