--- a/index1.html
+++ b/index1.html
@@ -9,15 +9,17 @@
 
 	<div id="main-header">
 		<div id="nav-user">
-			<a href="">Home</a>
-			<a href="" ng-show="" >My Account</a>
-			<a href="">My Wishlist</a>
-			<a href="">Check Out</a>
-			<a href="" ng-hide="" >Login</a>
+			<a href="">Home</a>&nbsp
+			<a href="" ng-show="" >My Account</a>&nbsp
+			<a href="">My Wishlist</a>&nbsp
+			<a href="">Check Out</a>&nbsp
+			<a href="" ng-hide="" >Login</a>&nbsp
 	    </div>
 		<div id="nav-header">
 			<img src="" alt="music">
-			<div id="search"></div>
+			<div id="find-albom">
+				<input type="text" class="search" ng-model="Search albom">
+			</div>
 			<div id="store-status"></div>
 		</div>
 	</div>
