--- a/app/Genre/_genre-list.html
+++ b/app/Genre/_genre-list.html
@@ -1,6 +1,11 @@
 
-<aside ng-controller="GenreController">
-	<div id="music-genre">
-		<div ng-repeat="genre in genres">{{genre}}</div>
+<aside>
+	<div id="music-genre" ng-controller="GenreController">
+		<div ng-repeat="genre in GenreFactory.genres">{{ genre }}</div>
+        <!--<div>First genre</div>-->
+        <!--<div>Second genre</div>-->
+        <!--<div>Third genre</div>-->
+        <!--<div>Fourth genre</div>-->
+        <!--<div>Fifth genre</div>-->
 	</div>
 </aside>
