--- a/app/Genre/_genre-list.html
+++ b/app/Genre/_genre-list.html
@@ -1,7 +1,7 @@
 
 <aside>
 	<div id="music-genre" ng-controller="GenreController">
-		<div ng-repeat="genre in GenreFactory.genres">{{ genre }}</div>
+		<div ng-repeat="genre in genres">{{ genre }}</div>
         <!--<div>First genre</div>-->
         <!--<div>Second genre</div>-->
         <!--<div>Third genre</div>-->
