index path to bower

--- a/index1.html
+++ b/index1.html
@@ -32,7 +32,7 @@
 		
 		<div id="view-route"><ng-view></ng-view></div>
 
-
+	<script src="bower_components/angular/angular.min.js"></script>
 	<script src="app/angular-1.1.5.js"></script>
 	<script src="app/app.js"></script>
 	<script src="app/Shared/Modules.js"></script>
