--- a/index1.html
+++ b/index1.html
@@ -10,11 +10,11 @@
 		<header>
 			<nav>
 				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#" ng-show="">My Account</a></li>
-					<li><a href="#">My Wishlist</a></li>
-					<li><a href="#">Checkout</a></li>
-					<li><a href="#" ng-hide="" >Log In</a></li>
+					<a href="#"><li>Home</li></a>
+					<a href="#" ng-show=""><li>My Account</li></a>
+					<a href="#"><li>My Wishlist</li></a>
+					<a href="#"><li>Checkout</li></a>
+					<a href="#" ng-hide="" ><li>Log In</li></a>
 				</ul>	
    			</nav>
 			<div id="nav-header">
