--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
 		<header>
 			<nav>
 				<ul>
-					<a href="index1.html"><li>Home</li></a>
+					<a href="#home"><li>Home</li></a>
 					<a href="#myAcoount" ng-show=""><li>My Account</li></a>
 					<a href="#myWishlist"><li>My Wishlist</li></a>
 					<a href="check-out-1.html"><li>Checkout</li></a>
@@ -33,7 +33,7 @@
 		<div id="view-route"><ng-view></ng-view></div>
 
 	<script src="bower_components/angular/angular.min.js"></script>
-	<script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+	<script src="bower_components/angular-route/angular-route.min.js"></script>
 	<script src="app/app.js"></script>
 	<!--<script src="app/angular-route.js"></script>-->
 	<script src="app/Shared/Modules.js"></script>
