--- a/index1.html
+++ b/index1.html
@@ -39,7 +39,8 @@
 	<script src="app/Shared/Modules.js"></script>
 	
 	<script	src="app/Albums/AlbumsFactory.js"></script>
-    
+    <script	src="app/Albums/AlbumsController.js"></script>
+
 
     <script src="app/User/UserFactory.js"></script>
 
