--- a/index1.html
+++ b/index1.html
@@ -4,7 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Home Page</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
+<!-- 	<link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+ --></head>
 <body ng-controller="mainController">
 
 		<header>
@@ -25,16 +26,15 @@
 				<div id="store-status"></div>
 			</div>
 		</header>
-
+		<div id="view-route"><ng-view></ng-view></div>
 		<genre-list> daniel </genre-list>
 
 		<my-cart> kira </my-cart>
-		
-		<div id="view-route"><ng-view></ng-view></div>
 
 	<script src="bower_components/angular/angular.min.js"></script>
 	<script src="bower_components/angular-route/angular-route.min.js"></script>
-	<script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+	<!--<script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>-->
 	<script src="app/app.js"></script>
 	<!--<script src="app/angular-route.js"></script>-->
 	<script src="app/Shared/Modules.js"></script>
