--- a/app/Cart/_cart.html
+++ b/app/Cart/_cart.html
@@ -1,5 +1,5 @@
 <aside>
-	<div id="cart">
+	<div id="cart" ng-show="false">
 		<h1>My Cart</h1>
 		<p>There are {{  }} in your cart.</p>
 		<p>Cart Subtotal: {{  }} <button>Checkout</button></p>
