--- a/app/Albums/_home.html
+++ b/app/Albums/_home.html
@@ -2,6 +2,7 @@
 	<div id="head-albums">
 		<div class="head albums"  ng-repeat="album in albums | limitTo : 9: 0 track by $index ">{{album.album_name }}</div>	
 	</div>
+	<div id="backery"><p>New Products</p></div>
 	<div id ="center-albums">
 		<div class="center albums"  ng-repeat="album in albums | limitTo :12 :0 track by $index">{{album.album_name}}</div>
 	</div>
