--- a/index1.html
+++ b/index1.html
@@ -30,11 +30,10 @@
 		<genre-list> daniel </genre-list>
 
 		<my-cart> kira </my-cart>
-
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="bower_components/angular/angular.min.js"></script>
 	<script src="bower_components/angular-route/angular-route.min.js"></script>
-	<!--<script src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>-->
+	<script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
 	<script src="app/app.js"></script>
 	<!--<script src="app/angular-route.js"></script>-->
 	<script src="app/Shared/Modules.js"></script>
