--- a/app/Albums/_home.html
+++ b/app/Albums/_home.html
@@ -1,18 +1,23 @@
 <main ng-controller="AlbumController">
 
 	<div id="head-albums">
-		<div class="head albums"  ng-repeat="album in albums | limitTo : 9: 0 track by $index ">{{album.album_name }}</div>	
+		<div class="head"  ng-repeat="album in albums | limitTo : 9: 0 track by $index ">{{album.album_name }}</div>	
 	</div>
 
 	<div id="backery"><p>New Products</p></div>
-	<div infinite-scroll="loadMore()" infinite-scroll-distance='20'>
 		<div id ="center-albums">
 			<div class="center albums"  ng-repeat="album in albums | limitTo :12 :0 track by $index">{{album.album_name}}</div>
 		</div>
-	</div>
-
+	
 	<div id ="left-albums">
 		<div class= "left albums" ng-repeat="album in albums | limitTo :2 :0 track by $index ">{{album.album_artist}}</div>
 	</div>
+
+	<div infinite-scroll="loadMore()" infinite-scroll-disabled='busy' infinite-scroll-distance='1'>
+		<div ng-show='busy'>Loading data...</div>
+		<div id="page">
+		    <div class="page"  ng-repeat="album in albums  track by $index">{{album.album_name}}</div>
+        </div>
+    </div>
 
 </main>
