--- a/index1.html
+++ b/index1.html
@@ -34,6 +34,7 @@
 	<script src="bower_components/angular/angular.min.js"></script>
 	<script src="bower_components/angular-route/angular-route.min.js"></script>
 	<script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js"></script>
+	<script src="app/angular-filter.js"></script>	
 	<script src="app/app.js"></script>
 	<!--<script src="app/angular-route.js"></script>-->
 	<script src="app/Shared/Modules.js"></script>
