update album group

--- a/app/Albums/_home.html
+++ b/app/Albums/_home.html
@@ -1,7 +1,7 @@
-<main ng-controller="AlbumController">
+<main ng-controller="AlbumsController">
 
 	<div id="head-albums">
-		<div class="head" ng-repeat="album in albums | limitTo : 9: 0 track by $index ">
+		<div class="head" ng-repeat="album in albums | limitTo : 9: 0 track by $index " ng-click="toogleAlbum( $index )">
 			<img ng-src="Images/{{album.image_path}}" alt="">		
 			<div class="info-head">
 			    <p class="head-name">{{album.album_name | limitTo:25 }}</p>
@@ -33,7 +33,7 @@
 	<div infinite-scroll="loadMore()" infinite-scroll-disabled='busy' infinite-scroll-distance='3'>
 		<div ng-show='busy'>Loading data...</div>
 		<div id="page">
-		    <div class="page" ng-repeat="album in albums  track by $index">
+		    <div class="page" ng-repeat="album in next albums  track by $index" >
 				<img ng-src="Images/{{album.image_path}}" alt="">
 		        <div class="info-head">
 				    <p class="head-name">{{album.album_name}}</p>
