--- a/check-out-1.html
+++ b/check-out-1.html
@@ -18,7 +18,7 @@
 					<a href="#myAcoount" ng-show=""><li>My Account</li></a>
 					<a href="#myWishlist"><li>My Wishlist</li></a>
 					<a href="check-out-1.html"><li>Checkout</li></a>
-					<a href="#" ng-hide="" ><li>Log In</li></a>
+					<a href="login.php" ng-hide="" ><li>Log In</li></a>
 				</ul>	
 			</div>	
 			</nav>
@@ -69,8 +69,10 @@
 					</div>
 			</div>
 			
-			<a href="check-out-2.html"><div class="sectionHead cf"><span>2</span>Payment Information</div></a>
-			<a href="check-out-3.html"><div class="sectionHead cf"><span>3</span>Order Review</div></a>
+			<a href="check-out-2.html"><div class="sectionHead cf na"><span>2</span>Payment Information</div></a>
+			<a href="check-out-3.html"><div class="sectionHead cf na"><span>3</span>Order Review</div></a>
 		</div>
 		<aside></aside>
 	</div>	
+	</body>
+	</html>
