--- a/check-out-3.html
+++ b/check-out-3.html
@@ -18,7 +18,7 @@
 					<a href="#myAcoount" ng-show=""><li>My Account</li></a>
 					<a href="#myWishlist"><li>My Wishlist</li></a>
 					<a href="check-out-1.html"><li>Checkout</li></a>
-					<a href="#" ng-hide="" ><li>Log In</li></a>
+					<a href="login.php" ng-hide="" ><li>Log In</li></a>
 				</ul>	
 			</div>	
 			</nav>
@@ -39,9 +39,9 @@
 		<div id="checkout-content">
 			<h1 class="check-out-h1">Checkout</h1>
 			<div class="forms cf">
-				<a href="check-out-1.html"><div class="sectionHead step cf"><>1</bold>Billing Information</div></a>
-				<a href="check-out-2.html"><div class="sectionHead cf"><bold>2</bold>Payment Information</div></a>
-				<a href="check-out-3.html"><div class="sectionHead cf three"><bold>3</bold>Order Review</div></a>
+				<a href="check-out-1.html"><div class="sectionHead step cf na"><span>1</span>Billing Information</div></a>
+				<a href="check-out-2.html"><div class="sectionHead cf na"><span>2</span>Payment Information</div></a>
+				<a href="check-out-3.html"><div class="sectionHead cf three"><span>3</span>Order Review</div></a>
 
 				<ul id="order" class="order cf">
 
