--- a/index1.html
+++ b/index1.html
@@ -12,7 +12,7 @@
 		<nav>
 			<div class="wrapper">
 				<ul>
-					<a href="index1.html"><li>Home</li></a>
+					<a href="#home"><li>Home</li></a>
 					<a href="#myAcoount" ng-show=""><li>My Account</li></a>
 					<a href="#myWishlist"><li>My Wishlist</li></a>
 					<a href="check-out-1.html"><li>Checkout</li></a>
@@ -28,6 +28,7 @@
 				</div>
 				<div id="store-status"></div>
 			</div>
+
 		</div>
 	</header>
 		<div id="view-route"><ng-view></ng-view></div>
