--- a/app/Genre/_genre-list.html
+++ b/app/Genre/_genre-list.html
@@ -1,6 +1,6 @@
 
 <aside>
-	<div id="music-genre" ng-controller="GenreController">
+	<div id="music-genre" ng-show="true" ng-controller="GenreController">
 		<div ng-repeat="genre in genres">{{ genre.genre_name }}</div>
 	</div>
 </aside>
