--- a/check-out-3.html
+++ b/check-out-3.html
@@ -18,7 +18,7 @@
 					<a href="#myAcoount" ng-show=""><li>My Account</li></a>
 					<a href="#myWishlist"><li>My Wishlist</li></a>
 					<a href="check-out-1.html"><li>Checkout</li></a>
-					<a href="login.php" ng-hide="" ><li>Log In</li></a>
+					<a href="#login" ng-hide="" ><li>Log In</li></a>
 				</ul>	
 			</div>	
 			</nav>
