--- a/index1.html
+++ b/index1.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Home Page</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="checkout.css">
 <!-- 	<link href="bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
  --></head>
 <body ng-controller="mainController">
@@ -16,7 +17,7 @@
 					<a href="#myAcoount" ng-show=""><li>My Account</li></a>
 					<a href="#myWishlist"><li>My Wishlist</li></a>
 					<a href="check-out-1.html"><li>Checkout</li></a>
-					<a href="login.php" ng-hide="" ><li>Log In</li></a>
+					<a href="#login" ng-hide="" ><li>Log In</li></a>
 				</ul>	
 			</div>	
 			</nav>
@@ -49,6 +50,7 @@
 
 
     <script src="app/User/UserFactory.js"></script>
+    <script src="app/User/UserController.js"></script>
 
 	<script src="app/Genre/GenreFactory.js"></script>
 	<script src="app/Genre/GenreDirective.js"></script>
