--- a/app/Albums/_album.html
+++ b/app/Albums/_album.html
@@ -1,1 +1,3 @@
-<main ng-controller = "AlbumsController"
+<div id="view-album" ng-controller = "SelectedAlbumController">
+	<p>hello Album you selected</p>
+</div>
