--- a/app/Albums/_home.html
+++ b/app/Albums/_home.html
@@ -1,8 +1,9 @@
 <main ng-controller="AlbumsController">
 
 	<div id="head-albums">
-		<div class="head" ng-repeat="album in albums | limitTo : 9: 0 track by $index " ng-click="toogleAlbum( $index )">
-			<img ng-src="Images/{{album.image_path}}" alt="">		
+		<div class="head" ng-repeat="album in albums | limitTo : 9: 0 track by $index ">
+			<a ng-href="#album:"{{album.album_id}}><img ng-src="Images/{{album.image_path}}" alt=""> </a> 
+					
 			<div class="info-head">
 			    <p class="head-name">{{album.album_name | limitTo:25 }}</p>
 				<p class="head-artist">{{album.album_artist }}</p>
@@ -13,7 +14,7 @@
 	<div id="backery"><p>New Products</p></div>
 	
 	<div id ="center-albums">
-		<div class="center albums"  ng-repeat="album in albums | limitTo :12 :12 track by $index">
+		<div class="center albums"  ng-repeat="album in albums | limitTo :12 :12 track by $index" ng-click="toogleAlbum( $index )">
 			<img ng-src="Images/{{album.image_path}}" alt="">				
 			<div class="info-head">
 			    <p class="head-name">{{album.album_name}}</p>
@@ -22,7 +23,7 @@
 	</div>
 	
 	<div id ="left-albums">
-		<div class= "left albums" ng-repeat="album in albums | limitTo :2 :10 track by $index ">
+		<div class= "left albums" ng-repeat="album in albums | limitTo :2 :10 track by $index " ng-click="toogleAlbum( $index )" >
 			<img ng-src="Images/{{album.image_path}}" alt="">
 			<div class="info-head">
 			    <p class="head-name">{{album.album_name}}</p>
@@ -33,7 +34,7 @@
 	<div infinite-scroll="loadMore()" infinite-scroll-disabled='busy' infinite-scroll-distance='3'>
 		<div ng-show='busy'>Loading data...</div>
 		<div id="page">
-		    <div class="page" ng-repeat="album in nextalbums  track by $index" >
+		    <div class="page" ng-repeat="album in nextalbums  track by $index" ng-click="toogleAlbum( $index )">
 				<img ng-src="Images/{{album.image_path}}" alt="">
 		        <div class="info-head">
 				    <p class="head-name">{{album.album_name}}</p>
