--- a/index1.html
+++ b/index1.html
@@ -12,17 +12,18 @@
 		<nav>
 			<div class="wrapper">
 				<ul>
-					<a href="#home"><li>Home</li></a>
-					<a href="#myAcoount" ng-show=""><li>My Account</li></a>
-					<a href="#myWishlist"><li>My Wishlist</li></a>
-					<a href="check-out-1.html"><li>Checkout</li></a>
-					<a href="login.php" ng-hide="" ><li>Log In</li></a>
+					<a ng-href="#home"><li>Home</li></a>
+					<a ng-href="#myAcoount" ng-hide="true"=""><li>My Account</li></a>
+					<a ng-href="#myWishlist"><li>My Wishlist</li></a>
+					<a ng-href="check-out-1.html"><li>Checkout</li></a>
+					<a ng-href="login.php" ng-hide="true" ><li>Log In</li></a>
 				</ul>	
 			</div>	
 			</nav>
 		<div id="nav-header">
 			<div class="wrapper">
-				<img class="logo" src="Images/logo.png" >
+				<a href="#home"><img class="logo" src="Images/logo.png" ></a>
+				<!-- <img class="logo" src="Images/logo.png" > -->
 				<div id="find-album">
 					<input type="text" class="search" />
 				</div>
@@ -46,7 +47,7 @@
 	
 	<script	src="app/Albums/AlbumsFactory.js"></script>
     <script	src="app/Albums/AlbumsController.js"></script>
-
+    <script	src="app/Albums/SelectedAlbumController.js"></script>
 
     <script src="app/User/UserFactory.js"></script>
 
