routes for genre and album

--- a/app/Albums/_album.html
+++ b/app/Albums/_album.html
@@ -1,5 +1,8 @@
 
-<div id="view-album" ng-controller = "SelectedAlbumController">
-	<p>hello Album you selected</p>
-</div>
+<main ng-controller = "SelectedAlbumController">
+	<div id="bread-crump" ng-show="true"><p>ALBUMS</p></div>
+	<div id="view-album">
+	    <p>hello Album you selected</p>
+	</div>
+</main>
 
