--- a/index1.html
+++ b/index1.html
@@ -8,7 +8,7 @@
 </head>
 <body ng-controller="mainController">
 
-		<header>
+	<header>
 		<nav>
 			<div class="wrapper">
 				<ul>
@@ -29,13 +29,13 @@
 				</div>
 				<div id="store-status"></div>
 			</div>
-
 		</div>
 	</header>
+	<!-- 	<div id="bread-crump" ng-show="false"></div> -->
 		<div id="view-route"><ng-view></ng-view></div>
 		<genre-list> daniel </genre-list>
-
 		<my-cart> kira </my-cart>
+
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
 	<script src="bower_components/angular/angular.min.js"></script>
 	<script src="bower_components/angular-route/angular-route.min.js"></script>
