--- a/app/Albums/_home.html
+++ b/app/Albums/_home.html
@@ -2,7 +2,7 @@
 
 	<div id="head-albums">
 		<div class="head" ng-repeat="album in albums | limitTo : 9: 0 track by $index ">
-			<a ng-href="#/album:{{album.album_id}}"><img ng-src="Images/{{album.image_path}}" alt=""></a> 
+			<a ng-href="#/album{{album.album_id}}"><img ng-src="Images/{{album.image_path}}" alt=""></a> 
 			<div class="info-head">
 			    <p class="head-name">{{album.album_name | limitTo:25 }}</p>
 				<p class="head-artist">{{album.album_artist }}</p>
@@ -32,7 +32,7 @@
 	<div infinite-scroll="loadMore()" infinite-scroll-disabled='busy' infinite-scroll-distance='3'>
 		<div ng-show='busy'>Loading data...</div>
 		<div id="page">
-		    <div class="page" ng-repeat="album in nextalbums  track by $index" ">
+		    <div class="page" ng-repeat="album in albums  track by $index" ">
 				<img ng-src="Images/{{album.image_path}}" alt="">
 		        <div class="info-head">
 				    <p class="head-name">{{album.album_name}}</p>
