--- a/app/Albums/_genre-albums.html
+++ b/app/Albums/_genre-albums.html
@@ -1,7 +1,7 @@
 <div id="bread-crump" ng-show="true">		
 	<p>albums you selected by genre</p>
 </div>
-<main>
+<main ng-controller="AlbumsControler" >
 	<div id="genres-albums">
 		<div class="albums" ng-repeat="album in albums track by $index"></div>
 	</div>
