--- a/app/Albums/_album.html
+++ b/app/Albums/_album.html
@@ -18,18 +18,18 @@
 				<hr>
 				<p class="count"> Only {{album.album_stock}} left</p><br>
 				<p class="album-price"> {{album.album_price | currency:"$"}}</p><br>
-				<p class="introduction">{{introduction | limitTo:320:0}}
-				</p>
+				<p class="introduction">{{introduction | limitTo:320:0}}</p>
 			</div>
 			<div id="manage-cart">
-				<p class="total">Total Price:{{totalprice}}</p>
+				<p class="total" >Total Price:{{ totalPrice | currency:"$" }}</p>
 				<hr>
 				<div class="manage-quantety">
-					 <label>Qty: <input type="number" ng-class="display-quantety" min="1" max="10" step="1" ng-model="quantety"></label>
-					<button class="add" min="1" max="10" step="2" ng-click = "addToQuantety()"> + </button><br>
-					<button class="remove" min="1" max="10" step="1" ng-click = "removeFromQuantety()"> - </button>
-					<button id="add-to-cart"  ng-click="addToCart(  )">Add to Cart</button>
+					<label>Qty: <input type="text" ng-class="display-quantety" min="1" max="10" step="1" ng-model="quantety"></label>
+					<button class="add" ng-click = "addToQuantety()"> + </button>
+					<button class="remove" ng-click = "removeFromQuantety()"> - </button>
 				</div>
+				<button class="add-to-cart" ng-click="addToCart(quantety)">Add to Cart</button>
+
 				<hr>
 				<button id="wishlist"><img src="" class="heart" alt="">Add to Wishlist</button>
 			</div>
