--- a/app/Albums/_album.html
+++ b/app/Albums/_album.html
@@ -1,6 +1,6 @@
 
 <main ng-controller = "SelectedAlbumController" ng-init="loadAlbum()">
-	<div id="bread-crump" ng-show="true"><p>hello Album you selected</p></div>
+    <bread-crumb></bread-crumb>
 	<div id="view-album">	    
 	    
 	    <img ng-src="Images/{{album.image_path}}" alt="">
