--- a/index1.html
+++ b/index1.html
@@ -31,9 +31,10 @@
 			</div>
 		</div>
 	</header>
-	<!-- 	<div id="bread-crump" ng-show="false"></div> -->
-		<genre-list> daniel </genre-list>
-		<my-cart> kira </my-cart>
+    
+        <!--<bread-crumb></bread-crumb>-->
+		<genre-list></genre-list>
+		<my-cart></my-cart>
 		<div id="view-route"><ng-view></ng-view></div>
 		
 
@@ -57,10 +58,13 @@
 	<script src="app/Genre/GenreDirective.js"></script>
 	<script src="app/Genre/GenreController.js"></script>
 
-
 	<script src="app/Cart/CartFactory.js"></script>
 	<script src="app/Cart/CartDirective.js"></script>
 	<script src="app/Cart/CartController.js"></script>
-	
+
+    <!--<script src="app/Breadcrumb/BreadCrumbFactory.js"></script>-->
+    <script src="app/Breadcrumb/BreadCrumbDirective.js"></script>
+    <!--<script src="app/Breadcrumb/BreadCrumbController.js"></script>-->
+
 </body>
 </html>
