--- a/app/Breadcrumb/_bread-crumb.html
+++ b/app/Breadcrumb/_bread-crumb.html
@@ -1,2 +1,2 @@
 
-<div id="bread-crump" ng-show="true"><p>Still > Doesn't > Work</p></div>
+<div id="bread-crumb" ng-show="true"><p>Still > Doesn't > Work</p></div>
