view  resolution changes

--- a/app/Albums/_genre-albums.html
+++ b/app/Albums/_genre-albums.html
@@ -1,7 +1,5 @@
 <genre-list> daniel </genre-list>
-<div id="bread-crump" ng-show="true">		
-	<p>albums you selected by genre</p>
-</div>
+<bread-crumb></bread-crumb>
 
 <main ng-controller="AlbumsControler" >
 	
