--- a/index1.html
+++ b/index1.html
@@ -52,6 +52,7 @@
 
     <script src="app/User/UserFactory.js"></script>
     <script src="app/User/UserController.js"></script>
+    <script src="app/User/UserDirective.js"></script>
 
 	<script src="app/Genre/GenreFactory.js"></script>
 	<script src="app/Genre/GenreDirective.js"></script>
