--- a/app/Albums/_album.html
+++ b/app/Albums/_album.html
@@ -4,7 +4,6 @@
 	<genre-list> daniel </genre-list>
 	<my-cart> kira </my-cart>
 
-
 	<div id="view-album">	    
 	    
 	    <img ng-src="Images/{{album.image_path}}" alt="">
@@ -39,5 +38,7 @@
 			</div>
 		</div>
 	</div>
+<footer></footer>
 </main>
+
 
