--- a/app/Albums/_home.html
+++ b/app/Albums/_home.html
@@ -10,6 +10,7 @@
 			<a ng-href="#/album{{album.album_id}}"><img ng-src="Images/{{album.image_path}}" alt=""></a> 			
 			<div class="info-head">
 			    <p class="head-name">{{album.album_name}}</p>
+				<p class="album-price">{{album.album_price | currency:"$"}}</p>
 		    </div>
 		</div>
 	</div>
