--- a/app/User/_login.html
+++ b/app/User/_login.html
@@ -22,7 +22,7 @@
 		
 	
 		
-		<div id="registr" 	ng-class="visible">
+		<div id="registr" 	ng-show="visible">
 			<h2>Registration <p ng-click="hideMe();">X</p></h2>
 
 			<label>Profile Informations</label>
