--- a/app/Albums/_genre-albums.html
+++ b/app/Albums/_genre-albums.html
@@ -2,13 +2,20 @@
 <bread-crumb></bread-crumb>
 
 <main ng-controller="AlbumsGenreController" >	
-	<!-- <div id="genres-albums"> -->
-		<div class="albums" ng-repeat="album in albums track by $index">
+	
+	<div id="center-albums">
+		<div class="genre-amount">
+			<p>{{genreName }} ({{genreLength + " items"}})</p>
+		</div>
+		<div class="genre-albums" ng-repeat="album in albums track by $index">
 		    <a ng-href="#/album{{album.album_id}}"><img ng-src="Images/{{album.image_path}}" alt=""></a> 			
-			<div class="info-head">
-			    <p class="head-name">{{album.album_name}}</p>
+			<div class="info-manage-album">
+			    <p class="head-name">{{album.album_artist}} - {{album.album_name}}</p>
+				<p class="album-descriptoin">{{album.album_description | limitTo:120:0}}...</p>
 				<p class="album-price">{{album.album_price | currency:"$"}}</p>
+		    	<img ng-src="Images/{{album.image_path}}" alt="">
+		    	<img ng-src="" alt="">
 		    </div>
-	   </div>
-	<!-- </div> -->
+	    </div>
+	</div>
 </main>
