--- a/app/Genre/_genre-list.html
+++ b/app/Genre/_genre-list.html
@@ -2,7 +2,7 @@
 <aside>
 	<div id="music-genre" ng-show="true" ng-controller="GenreController">
 		<div ng-repeat="genre in genres">
-			<a ng-href="#/genre-albums:{{genre.genre_id}}">{{ genre.genre_name }}</a>
+			<a ng-href="#/genre-albums{{genre.genre_id}}">{{ genre.genre_name }}</a>
 	    </div>
 	</div>
 </aside>
