--- a/app/User/_login.html
+++ b/app/User/_login.html
@@ -1,4 +1,5 @@
-<main  ng-controller="UserController">
+<main  ng-controller="UserController as ctrl">
+	<form name="userForm" ng-submit="ctrl.submit()" novalidate>
 	<div class="wrapper">
 		<h1 class="check-out-h1">Login or Create an Account</h1>
 
@@ -11,13 +12,18 @@
 			<header>REGISTERED COSTUMERS</header>
 			<p>If you have an account with us, please log in.</p>
 			
-			<label for="email">Email Address<span>*</span></label>
-			<input type="email" name="email" id="email">
+
+			<div class="form-group" ng-class="{ 'has-error' : userForm.email.$invalid && !userForm.email.$pristine }">
+				<label for="email">Email Address<span>*</span></label>
+				<input type="email" name="email" id="email" ng-model="ctrl.user.email" class="form-control">
+				<span ng-show="userForm.$dirty && userForm.email.$error.required">This is a required field</span>
+                <span ng-show="userForm.$dirty && userForm.email.$invalid">This field is invalid </span>
+			</div>
 
 			<label for="pass">Password<span>*</span></label>
 			<input type="password" name="pass" id="pass">
 
-			<input type="button" value="Login" id="loginBtn"  class="btn log">
+			<input type="submit" value="Login" id="loginBtn" ng-disabled="userForm.$invalid"   class="btn log">
 		</div>
 		
 	
@@ -26,19 +32,30 @@
 			<h2>Registration <p ng-click="hideMe();">X</p></h2>
 
 			<label>Profile Informations</label>
-			<input type="text" name="firstName" id="firstName" placeholder="First Name">
-			<input type="text" name="lastName" id="lastName" placeholder="Last Name">
+			<div class="form-group" ng-class="{ 'has-error' : !userForm.firstName.$dirty && submitted }">
+				<input type="text" class="username" name="firstName" id="firstName" placeholder="First Name" ng-model="ctrl.firstName" ng-minlength="2" ng-maxlength="10" required>
+					<span ng-show="userForm.$dirty && userForm.firstName.$error.required">This is a required field.</span>
+                	<span ng-show="userForm.$dirty && userForm.firstName.$error.minlength">Minimum length required is 2.</span>
+                	<span ng-show="userForm.$dirty && userForm.firstName.$invalid">This field is invalid. </span>
+			</div>
 
+			<div class="form-group"  ng-class="{ 'has-error' : !userForm.lastName.$dirty && submitted }">
+				<input type="text" class="username" name="lastName" id="lastName" placeholder="Last Name" ng-model="ctrl.lastName" ng-minlength="2" ng-maxlength="10" required>
+					<span ng-show="userForm.$dirty && userForm.lastName.$error.required">This is a required field.</span>
+	                <span ng-show="userForm.$dirty && userForm.lastName.$error.minlength">Minimum length required is 2.</span>
+	                <span ng-show="userForm.$dirty && userForm.lastName.$invalid">This field is invalid. </span>
+			</div>
 			<label>Login Datas</label>
-			<input type="email" name="email" id="email" placeholder="E-mail adress">				
-			<input type="pass" name="pass" id="pass" placeholder="Password">
-			<input type="pass" name="pass" id="pass" placeholder="Password confirmation">
+			
+			<input type="email" name="email" id="email" placeholder="E-mail adress" required>				
+			<input type="pass" name="pass" id="pass" placeholder="Password" required>
+			<input type="pass" name="pass" id="pass" placeholder="Password confirmation" required>
 
-			<input type="button" value="Register" id="regBtn"  class="btn reg">
+			<input type="submit" ng-disabled="userForm.$invalid" ng-click="submit()" value="Register" id="regBtn"  class="btn reg">
 		</div>
 
 	</div>	
-
+	</form>
 </main>
 
 
